--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
 
 <head>
-    <script src="exercises/6-1-moving/5-3-start.js" type="module"></script>
+    <script src="exercises/6-1-moving/6-2 bubble.js" type="module"></script>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 
 <body>
-    <input id ="cardsAmount" type="number" value="10"/>
-    <input id="cardsButton" type="button" value="Draw"/>
+    
     <canvas id="canvas"> </canvas>
 </body>
 
