--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="exercises/6-1-moving/6-2 bubble.js" type="module"></script>
+    <script src="exercises/5-1 exercise/5-2 maze.js" type="module"></script>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 
